# defi-arbitrage-bot

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
bot/: Cargo.toml
bot/src/: cronJob.rs  lib.rs  main.rs  objectiveFunc.rs  objective_func.rs  regular_job.rs
bot/tests/: flashloan_i9n.rs
contracts/: foundry.toml
contracts/src/: FlashLoan.sol
contracts/test/: FlashLoan.t.sol
