[package]
name = "defi-arbitrage-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
dotenv = "0.15.0"
ethers = "2.0.10"
ethers-contract = "2.0.10"
ethers-core = "2.0.10"
futures-util = "0.3.28"
reqwest = "0.11.22"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }

